Demonstration 코드 정리 및 주석